# PCSS2017

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Makefile  PCSS2017.cbp  README.md  client  clientExe  client~473faf2facdc34a44fbb9024c8600a6dae8326b5  cmake_install.cmake  make.sh  serverExe
Client/: Button.cpp  Button.h  Client.cpp  Client.h  Dice.cpp  Dice.h  Field.cpp  FieldAction.cpp  FieldAction.h  Fields.cpp  Fields.h  GameManager.cpp  GameManager.h  Lobby.cpp  Lobby.h  MainMenu.cpp  MainMenu.h  Player.cpp  Player.h  client.cpp  client.h  constants.cpp  constants.h  main.cpp  sfml-app
Server/: Lobby.cpp  Server.cpp  Server.h
html/: config_8h_source.html  files.html  md_README.html  pages.html
latex/: md_README.tex  refman.tex
ruleset/: ruleset.aux  ruleset.tex
